tests/errors/test-object-not-constructible.script

class A {}; 
A a;

//>3:3: error C17: class does not provide a default constructor
